# ad-agent

./: .env.example  .gitignore  BUSINESS_PLAN.md  CLAUDE.md  CONTRIBUTION.md  Makefile  README.md  TEAM.md  pyproject.toml
.claude/: settings.json
agents/: BID_OPTIMIZER.md  CAMPAIGN_STRATEGIST.md  TEAM_LEAD.md
agents/analytics-team/: DATA_MONITOR.md  INSIGHT_ANALYST.md  TEAM_WORKFLOW.md
agents/channel-team/: GOOGLE_SPECIALIST.md  KAKAO_SPECIALIST.md  META_SPECIALIST.md  NAVER_SPECIALIST.md  TEAM_WORKFLOW.md
agents/content-pipeline/: AD_FACT_CHECKER.md  CONCEPT_PLANNER.md  DEEP_RESEARCHER.md  QA_SCORER.md
agents/creative-team/: COPYWRITER.md  CREATIVE_REVIEWER.md  TEAM_WORKFLOW.md  VISUAL_DIRECTOR.md
agents/keyword-team/: AUDIENCE_RESEARCHER.md  SEARCH_RESEARCHER.md  TEAM_WORKFLOW.md  TREND_ANALYST.md
analysis/: team_structure_analysis.md
archive/: completed_campaigns.md
config/: ad_quality_scoring.md  channels.md  feedback_loop.md  kpi_definitions.md  researcher_prechecklist.md  templates.md
handoff/: analysis_to_planning.md  budget_to_finance.md  concept_to_production.md  creative_team_to_channel_team.md  creative_to_thread.md  factcheck_to_qa.md  keyword_team_to_creative_team.md  production_to_factcheck.md  research_to_strategist.md  strategy_to_concept.md  strategy_to_keyword_team.md
logs/: retrospective.md
plugin/: adapters.md  integration_guide.md  interface.md
simulation/test-campaign-linknote/: BRIEF.md  (+6 more)
src/: __init__.py  main.py
state/: project_manager.md
workflows/: ab_testing.md  campaign_creation.md  optimization.md  reporting.md
(+38 files in other folders)
