[tool.poetry]
name = "ad-agent"
version = "0.1.0"
description = "AI-powered performance marketing platform - automated ad campaign management for Korean market"
authors = ["Agent Company <ceo@agentcompany.io>"]
license = "Proprietary"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.0.0"
aiosqlite = "^0.21.0"
aiofiles = "^24.1.0"
httpx = "^0.28.0"
anthropic = "^0.40.0"
structlog = "^25.4.0"
apscheduler = "^3.10"
facebook-business = "^21.0.0"
google-ads = "^25.1.0"

[tool.poetry.scripts]
ad-agent = "src.main:run"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
